Cleanup warnings in Cassandra